--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-spring": "^9.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
